[package]
name = "test-ictconscript-admission"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
actix-web = "4"
rusqlite = "0.37.0"
r2d2 = "0.8.10"
r2d2_sqlite  = "0.31.0"
# futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"